--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4"
   }
 }
