--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@babel/core": "^7.19.3",
     "@emailjs/browser": "^3.11.0",
-    "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.15.3",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@types/react-transition-group": "^4.4.9",
+    "@vercel/analytics": "^1.1.1",
     "algoliasearch": "^4.14.3",
     "axios": "^1.4.0",
     "emailjs-com": "^3.2.0",
@@ -40,6 +42,8 @@
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4"
+    "eslint-config-next": "^14.0.4",
+    "postcss": "^8.4.33",
+    "postcss-loader": "^7.3.4"
   }
 }
